// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CriterionFeedback /> renders feedbackDisabled render empty 1`] = `null`;

exports[`<CriterionFeedback /> renders feedbackEnabled 1`] = `
<Form.Group
  isInvalid={false}
>
  <Form.Control
    as="textarea"
    className="criterion-feedback feedback-input"
    floatingLabel="Add comments"
    onChange={[MockFunction feedbackOnChange]}
    value="feedback-1"
  />
</Form.Group>
`;

exports[`<CriterionFeedback /> renders feedbackIsInvalid 1`] = `
<Form.Group
  isInvalid={true}
>
  <Form.Control
    as="textarea"
    className="criterion-feedback feedback-input"
    floatingLabel="Add comments"
    onChange={[MockFunction feedbackOnChange]}
    value="feedback-1"
  />
  <Form.Control.Feedback
    className="feedback-error-msg"
    type="invalid"
  >
    The feedback is required
  </Form.Control.Feedback>
</Form.Group>
`;

exports[`<CriterionFeedback /> renders feedbackRequired disabled render empty 1`] = `null`;

exports[`<CriterionFeedback /> renders feedbackRequired: optional 1`] = `
<Form.Group
  isInvalid={false}
>
  <Form.Control
    as="textarea"
    className="criterion-feedback feedback-input"
    floatingLabel="Add comments (Optional)"
    onChange={[MockFunction feedbackOnChange]}
    value="feedback-1"
  />
</Form.Group>
`;
